fix spacing1

--- a/general.css
+++ b/general.css
@@ -34,7 +34,7 @@ body{
 
 @media(max-width: 1100px){
 	.logo>img{
-		height: 150px;
+		height: 180px;
 	}
 }
 
